# BallOnPlate

./: Input.npz  Int.npz  README.md  States.npz  Time.npz  main.py
BallOnPlatePkg/: CMakeLists.txt  package.xml
BallOnPlatePkg/src/: touchscreen.py
ballOnPlatePkg/: CMakeLists.txt
devel/: .catkin  local_setup.sh
devel/lib/pkgconfig/: ballOnPlatePkg.pc
devel/share/ballOnPlatePkg/cmake/: ballOnPlatePkgConfig.cmake
misc/: ball_and_plate_CCE_circleOBS_V0.py  ball_and_plate_CCE_circleOBS_V1.py
misc/Levant/: Diferenciador_Levant.m  Diferenciador_Levant.m~  datos2_yaw.txt
misc/papers/: GaleCode
src/ballOnPlatePkg/launch/: ballOnPlate.launch
src/ballOnPlatePkg/src/: LQRNengo.py  PID.py  PIDNengo copy.py  PIDNengo.py  PID_Nengo_bk5.py  ball_and_plate_CCE_circleOBS_V1.py  ball_and_plate_nengo_08_06_2023.py  constants.py  controller.py  controllerLoihi.py  controllerLoihi_actuator.py  controllerLoihi_read.py  main.py  plot.py  plots.py  plotsModified.py  plotter_bk5.py  save.py  servoSignalData.csv  servoSignalData.npy  servos.py  servosTemp.py  servos_loihi.py  spikingX.c  spikingX.h  test_E.py  touchScreen.py  touchScreenReadingFiltered.csv  touchScreenReadingFiltered.npy  touchScreenReadingRaw.csv  touchScreenReadingRaw.npy  touchscreen.py
src/ballOnPlatePkg/src/ArraysACC/: YaxisPlot.eps  controlNengo.npy  controlSignalData.npy  (+9 more)
src/ballOnPlatePkg/src/nxsdk-apps/tutorials/nxcore/tutorial_23_host_snips_with_ros_integration/: CMakeLists.txt  ROS_INSTALLATION_AND_SETUP.md  build.sh  ros_host_snip.cc  runmgmt.c  tutorial_23_host_snips_with_ros_integration.py
(+474 files in other folders)
